--- a/hw4/index.html
+++ b/hw4/index.html
@@ -32,7 +32,7 @@
 		<br>
 		
 		<h3><b>Part 1: Masses And Springs </b></h3>
-		<p style="color: #DBDEE1; width: 100%">In part one, we created the cloth mesh using vertices and springs connecting these vertices. We had structural springs that connected cardinally adjacent vertices, shearing springs that connected the vertices immediately diagonally, and bending springs that connected the vertices similar to structural but two apart. Structural springs allowed our mesh to have form, while shearing springs made sure that the cloth didn't stretch out unrestrictedly, and finally bending springs allowed the cloth to maintain a cloth-like shape without sharply folding at vertices. Below are images of the representation with specific springs.</p>
+		<p style="color: #DBDEE1; width: 100%">In part one, we created the cloth mesh using vertices and springs connecting these vertices. We had structural springs that connected cardinally adjacent vertices, shearing springs that connected the vertices immediately diagonally, and bending springs that connected the vertices similar to structural but two apart. Structural springs allowed our mesh to have form, while shearing springs made sure that the cloth didn't stretch out unrestricted. Finally, bending springs allowed the cloth to maintain a cloth-like shape without sharply folding at vertices. Below are images of the representation with specific springs.</p>
 		<p style="color: #DBDEE1; width: 100%">Here is our wireframe with no shearing constraints (only structural and bending):</p>
 		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task1/pinned2_no_shear.png" alt="0">
 		<p style="color: #DBDEE1; width: 100%">Then, with shearing constraints only:</p>
