--- a/hw4/index.html
+++ b/hw4/index.html
@@ -311,5 +311,29 @@
 			  	<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/extra_credit/bounce_3.png" alt="0">
 		  	</div>
 	  	</div>
+		<p style="color: #DBDEE1; width: 100%">For the third part of the extra credit, we implemented a few more primitive shapes.</p>
+		<div class="row">
+			<div class="column">
+			  	<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/extra_credit/np_square.png" alt="0">
+		  	</div>
+		  	<div class="column">
+			  	<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/extra_credit/np_square_circle.png" alt="0">
+		  	</div>
+		  	<div class="column">
+			  	<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/extra_credit/np_circle.png" alt="0">
+		  	</div>
+	  	</div>
+		<p style="color: #DBDEE1; width: 100%">Placeholder.</p>
+		<div class="row">
+			<div class="column">
+			  	<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/extra_credit/np_slanted_square.png" alt="0">
+		  	</div>
+		  	<div class="column">
+			  	<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/extra_credit/np_slanted_square_circle.png" alt="0">
+		  	</div>
+		  	<div class="column">
+			  	<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/extra_credit/np_slanted_circle.png" alt="0">
+		  	</div>
+	  	</div>
 	</body>
 </html>
