--- a/hw4/index.html
+++ b/hw4/index.html
@@ -57,7 +57,7 @@
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/ks_high.png" alt="0">
 			</div>
 		</div>
-		<p style="color: #DBDEE1; width: 100%">Density, on the other hand seemed to make the cloth more affected by gravity in its final resting state. Unlike the spring constant, a higher density didn't mean that the cloth converged to a resting state quicker. Rather, all it did was make the final state more pulled downwards. This would make sense because gravitational force emits a constant acceleration despite an object's mass. The higher density meant that the force acting on the vertices downwards was higher than the spring pulling it upwards. Below are images of a cloth with low, normal, and high density in order, showing these observations:</p>
+		<p style="color: #DBDEE1; width: 100%">Density, on the other hand, seemed to make the cloth more affected by gravity in its final resting state. Unlike the spring constant, a higher density didn't mean that the cloth converged to a resting state quicker. Rather, all it did was make the final state more pulled downwards. This would make sense because gravitational force emits a constant acceleration despite an object's mass. The higher density meant that the force acting on the vertices downwards was higher than the spring pulling it upwards. Below are images of a cloth with low, normal, and high density in order, showing these observations:</p>
 		<div class="row">
   			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw4/images/task2/density_low.png" alt="0">
